--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virt Keyboard</title>
     <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico">
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 
 </head>
 <body>
