--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virt Keyboard</title>
-    <link rel="icon" type="image/x-icon" href="../../assets/favicon.ico">
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-    <script type="module" src="./script.js?v=3"></script>
+    <script type="module" src="./script.js?v=4"></script>
 </body>
 </html>
